prevent brand from wrapping when menu is collapsed, but expanded

--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ svg {
 }
 
 .nav-brand {
+    white-space: nowrap;
     font-size: 2rem;
 }
 
